# mcp-telegram

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  telegram_mcp_server.py
